--- a/pom.xml
+++ b/pom.xml
@@ -52,17 +52,29 @@
 
     <repositories>
         <repository>
-            <id>spigotmc-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+            <id>papermc-repo</id>
+            <url>https://repo.papermc.io/repository/maven-public/</url>
+        </repository>
+
+        <repository> <!-- INVENTORY FRAMEWORK -->
+            <id>tcoded-releases</id>
+            <name>TCoded Releases</name>
+            <url>https://repo.tcoded.com/releases</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot-api</artifactId>
+            <groupId>io.papermc.paper</groupId>
+            <artifactId>paper-api</artifactId>
             <version>1.21.11-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency> <!-- INVENTORY FRAMEWORK -->
+            <groupId>me.devnatan</groupId>
+            <artifactId>inventory-framework-platform-paper</artifactId>
+            <version>3.7.1</version>
         </dependency>
     </dependencies>
 </project>
