--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-api</artifactId>
+            <version>4.25.0</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency> <!-- INVENTORY FRAMEWORK -->
             <groupId>me.devnatan</groupId>
             <artifactId>inventory-framework-platform-paper</artifactId>
